# emjudge-judgecore

./: .gitignore  Cargo.toml  build.rs  output
benches/: only_run_benchmark.rs  run_and_eval_benchmark.rs  run_and_interact_benchmark.rs
config/: compile.toml  compile_and_exe.toml  compile_and_exe_default.toml  compile_default.toml  config.toml  default.toml  run.toml  run_default.toml
examples/: 1plusto100.rs  aplusb.rs  compile.rs  compile_and_exe_settings.toml  guess_number.rs  helloworld.rs  memorylimit_exceed.rs  multiple.rs  permission.rs  test_1plusto100.rs  test_aplusb.rs  test_compile.rs  test_guess_number.rs  test_helloworld.rs  test_memorylimit_exceed.rs  test_permission.rs  test_timelimit_exceed.rs  timelimit_exceed.rs
examples/async_mode/: 1plusto100.rs  aplusb.rs  compile.rs  guess_number.rs  helloworld.rs  memorylimit_exceed.rs  multiple.rs  permission.rs  timelimit_exceed.rs
examples/programs/: compile_error.cpp  helloworld.adb  helloworld.cpp  helloworld.oct  helloworld.st  helloworld.tcl  large_printf.cpp  loop.cpp  mle.cpp
examples/programs/1plusto100/: eval.cpp
examples/programs/guessnumber/: interactor.cpp  tested
examples/programs/permission/: out  tested.cpp
examples/programs/the_same/: eval.cpp
examples/thread_mode/: 1plusto100.rs  aplusb.rs  compile.rs  guess_number.rs  helloworld.rs  memorylimit_exceed.rs  multiple.rs  permission.rs  timelimit_exceed.rs
src/: cgroup.rs  compile.rs  lib.rs  program.rs  quantity.rs  result.rs  run.rs  settings.rs  test.rs
src/async_mode/: program.rs  test.rs
src/thread_mode/: mod.rs  program.rs  test.rs
tests/: ans_and_eval.rs  language_info.rs  only_run.rs  run_and_eval.rs
