[package]
name = "emjudge-judgecore"
version = "0.1.2"
edition = "2021"

description = "Emjudge-Judgecore is a comprehensive library designed for the evaluation and testing of executing programs against specific specifications. Offering a robust judging system, it provides the framework for running and assessing programs within defined criteria, making it an essential tool for comprehensive program evaluation and testing."
license = "MIT"

[lib]
name = "emjudge_judgecore"
path = "src/lib.rs"

[dependencies]
config = "0.13.4"
lazy_static = "1.4.0"
serde = "1.0.194"
serde_with = "3.4.0" 
tempfile = "3.9.0"
toml = "0.8.8"
users = "0.11.0"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[target.'cfg(target_os="linux")'.dependencies]
cgroups-rs = "0.3.4"
nix = {version = "0.27.1", features = ["process", "signal", "resource"]}
