[package]
name = "emjudge-judgecore"
version = "0.1.5"
edition = "2021"

license = "MIT"
description = "Emjudge-Judgecore is a comprehensive library designed for the evaluation and testing of executing programs against specific specifications. Offering a robust judging system, it provides the framework for running and assessing programs within defined criteria, making it an essential tool for comprehensive program evaluation and testing."

[lib]
name = "emjudge_judgecore"
path = "src/lib.rs"

[dependencies]
config = "0.13.4"
lazy_static = "1.4.0"
psutil = "3.3.0"
serde = "1.0.194"
serde_with = "3.4.0"
tempfile = "3.9.0"
toml = "0.8.8"
users = "0.11.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[target.'cfg(target_os="linux")'.dependencies]
cgroups-rs = "0.3.4"
nix = { version = "0.27.1", features = ["process", "signal", "resource"] }

[dependencies.tokio]
version = "1.35.1"
optional = true
features = ["rt", "process", "fs", "time", "io-std", "io-util", "macros"]

[features]
full = ["async", "thread"]
async = ["tokio"]
thread = []

[[example]]
name = "thread_1plusto100"
path = "examples/thread_mode/1plusto100.rs"
required-features = ["thread"]

[[example]]
name = "thread_aplusb"
path = "examples/thread_mode/aplusb.rs"
required-features = ["thread"]

[[example]]
name = "thread_compile"
path = "examples/thread_mode/compile.rs"
required-features = ["thread"]

[[example]]
name = "thread_guess_number"
path = "examples/thread_mode/guess_number.rs"
required-features = ["thread"]

[[example]]
name = "thread_helloworld" 
path = "examples/thread_mode/helloworld.rs"
required-features = ["thread"]

[[example]]
name = "thread_memorylimit_exceed"
path = "examples/thread_mode/memorylimit_exceed.rs"
required-features = ["thread"]

[[example]]
name = "thread_permission" 
path = "examples/thread_mode/permission.rs"
required-features = ["thread"]

[[example]]
name = "thread_timelimit_exceed" 
path = "examples/thread_mode/timelimit_exceed.rs"
required-features = ["thread"]

[[example]]
name = "async_1plusto100"
path = "examples/async_mode/1plusto100.rs"
required-features = ["async"]

[[example]]
name = "async_aplusb"
path = "examples/async_mode/aplusb.rs"
required-features = ["async"]

[[example]]
name = "async_compile"
path = "examples/async_mode/compile.rs"
required-features = ["async"]

[[example]]
name = "async_guess_number"
path = "examples/async_mode/guess_number.rs"
required-features = ["async"]

[[example]]
name = "async_helloworld" 
path = "examples/async_mode/helloworld.rs"
required-features = ["async"]

[[example]]
name = "async_memorylimit_exceed"
path = "examples/async_mode/memorylimit_exceed.rs"
required-features = ["async"]

[[example]]
name = "async_permission" 
path = "examples/async_mode/permission.rs"
required-features = ["async"]

[[example]]
name = "async_timelimit_exceed" 
path = "examples/async_mode/timelimit_exceed.rs"
required-features = ["async"]
